--- a/AssignmentB1/index.html
+++ b/AssignmentB1/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,900,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -20,12 +21,12 @@
   <section class="main">
     <h2 class="desc-title">Project Description</h2>
     <!-- Replace this text with your description of the project -->
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi enim nibh, tempus rhoncus aliquam id, hendrerit non enim. Vestibulum eu tellus massa, vel interdum diam. Maecenas risus neque, dapibus vitae bibendum at, auctor sed neque. Vivamus dui felis, dignissim ut malesuada eu, consequat sed odio. Sed suscipit, magna et malesuada dignissim, libero nunc rhoncus purus, posuere vulputate nisl justo nec elit. Praesent adipiscing odio nec enim consectetur semper. Vivamus sollicitudin dapibus lacus a consectetur. Suspendisse quis massa vitae turpis tincidunt ultricies. Donec augue elit, mollis non malesuada a, pulvinar tincidunt orci. Vivamus scelerisque dapibus tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus turpis nisl, adipiscing in pellentesque sed, bibendum sed arcu. Vestibulum tincidunt mattis est nec dapibus. Nam faucibus, libero nec accumsan convallis, massa orci sollicitudin eros, vel vehicula enim est a orci.</p>
+    <p class="description">Thank you for taking an interest in Web Interface and Usability. This site was created to store links to the direct information for usability tests and their respective results. The usability tests that will be conducted are in relation to navigation flow. Using the Usability Hub website, different mobile and desktop interfaces will be uploaded to get real-time responses from actual users. They will be seeing various screens and given a task to perform with a goal in mind, and click the location on the screen in which they think is the correct process to advance through a pagenation process (i.e. signing up for a newsletter) and submitting the information. New usability tests are posted every week. Please check back frequently to see what new usability test is being performed.</p>
     <figure>
     <!--   add your image to the img folder 
       Replace the "img.jpg" with the name of your image  -->
-      <img src="img/img.jpg" alt="your picture description goes here"  />
-      <figcaption>Type caption of your image here</figcaption>    
+      <img src="img/stock-illustration-25472076.jpg" alt="Vector mobile devices set - Illustration"  />
+      <figcaption>Vector Mobile Devices Set Illustration  |  06-27-13 © <a href="http://www.istockphoto.com/vector/vector-mobile-devices-set-25472076?st=3b81d10">Anatoliy Babiy</a></figcaption>
     </figure>
   </section>
   <section class="sec">
