Updating links with the first nav flow test links

--- a/AssignmentB1/index.html
+++ b/AssignmentB1/index.html
@@ -40,8 +40,8 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="#">Link to test 1 here</a></td>
-             <td><a href="">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/do/a2e9ee4495e2/267d">Link to test 1 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/a2e9ee4495e2/results/fe15841849db">Link to test results 1</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 2 here</a></td>
