Updating links for the B3 assignment.

--- a/AssignmentB1/index.html
+++ b/AssignmentB1/index.html
@@ -40,15 +40,15 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="https://usabilityhub.com/do/a2e9ee4495e2/267d">Link to test 1 here</a></td>
+             <td><a href="https://usabilityhub.com/do/a2e9ee4495e2/267d">Usable Form Design - Mobile</a></td>
              <td><a href="https://usabilityhub.com/tests/a2e9ee4495e2/results/fe15841849db">Link to test results 1</a></td>
           </tr>
           <tr>
-             <td><a href="#">Link to test 2 here</a></td>
-             <td><a href="">Link to test results 2</a></td>
+             <td><a href="https://usabilityhub.com/do/a43b5cf754f5/6ade">Usable Details Design - Mobile</a></td>
+             <td><a href="https://usabilityhub.com/tests/a43b5cf754f5/results/93bc5de98e37">Link to test results 2</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 3 here</a></td>
+             <td><a href="#">Usable Homepage & Categories - Mobile</a></td>
              <td><a href="">Link to test results 3</a></td>
           </tr>
           <tr>
