--- a/AssignmentB1/index.html
+++ b/AssignmentB1/index.html
@@ -21,7 +21,7 @@
   <section class="main">
     <h2 class="desc-title">Project Description</h2>
     <!-- Replace this text with your description of the project -->
-    <p class="description">Thank you for taking an interest in Web Interface and Usability. This site was created to store links to the direct information for usability tests and their respective results about WorldSurf web and desktop interfaces. The usability tests that will be conducted are in relation to navigational flow. Using the Usability Hub website, different mobile and desktop interfaces will be uploaded to get real-time responses from actual users. The test participants will be viewing various screens and given a task to perform with a goal in mind. Therefore, they will have to click the location on the screen in which they think is the correct process to advance through a pagenation process (i.e. filling out a form to sign up for a newsletter) and submitting the information.<br><br>New usability tests are posted every week. Please check back frequently to see what new results we have gathered!<br>Last updated: December 4, 2014 @ 2:20AM</p>
+    <p class="description">Thank you for taking an interest in Web Interface and Usability. This site was created to store links to the direct information for usability tests and their respective results about WorldSurf web and desktop interfaces. The usability tests that will be conducted are in relation to navigational flow. Using the Usability Hub website, different mobile and desktop interfaces will be uploaded to get real-time responses from actual users. The test participants will be viewing various screens and given a task to perform with a goal in mind. Therefore, they will have to click the location on the screen in which they think is the correct process to advance through a pagenation process (i.e. filling out a form to sign up for a newsletter) and submitting the information.<br><br>New usability tests are posted every week. Please check back frequently to see what new results we have gathered!<br><br>Last updated: December 4, 2014 @ 2:20AM</p>
     <figure>
     <!--   add your image to the img folder 
       Replace the "img.jpg" with the name of your image  -->
@@ -52,8 +52,8 @@
              <td><a href="https://usabilityhub.com/tests/df71f1902f97/results/87d30f8c23c8">Link to test results 3</a></td>
           </tr>
           <tr>
-             <td><a href="#">Link to test 4 here</a></td>
-             <td><a href="#">Link to test results 4</a></td>
+             <td><a href="https://usabilityhub.com/do/3d292b7dddec/986a">Usable Details Design - Desktop</a></td>
+             <td><a href="https://usabilityhub.com/tests/3d292b7dddec/results/e8254d54f19e">Link to test results 4</a></td>
           </tr>
           <tr class="odd">
              <td><a href="#">Link to test 5 here</a></td>
