--- a/AssignmentB1/index.html
+++ b/AssignmentB1/index.html
@@ -56,7 +56,7 @@
              <td><a href="https://usabilityhub.com/tests/3d292b7dddec/results/e8254d54f19e">Link to test results 4</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="https://usabilityhub.com/do/b2f8150dbac7/2c47">Link to test 5 here</a></td>
+             <td><a href="https://usabilityhub.com/do/b2f8150dbac7/2c47">Usable Homepage Design - Desktop</a></td>
              <td><a href="https://usabilityhub.com/tests/b2f8150dbac7/results/f4121019dea8">Link to test results 5</a></td>
           </tr>
           <!-- start link -->
